--- a/Dockerfile_Frontend
+++ b/Dockerfile_Frontend
@@ -15,4 +15,5 @@ RUN rm -rf /usr/share/nginx/html/*
 RUN rm -rf /etc/nginx/conf.d/*
 COPY --from=compile-image /app/default.conf /etc/nginx/conf.d/
 COPY --from=compile-image  /app/dist/petrel.interviewer /usr/share/nginx/html
-EXPOSE 8080
+RUN cat /etc/nginx/conf.d/default.conf
+EXPOSE 80
