--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,6 @@ jobs:
           script_stop: true
           script: |
             cd ~/deploy
-            docker login -u ${{ env.DO_TOKEN }} -p ${{ env.DO_TOKEN }} registry.digitalocean.com
+            docker login -u ${{ env.DO_TOKEN }} -p ${{ env.DO_TOKEN }} registry.digitalocean.com/techinterview
             docker-compose pull -f docker-compose.frontend.yml
             docker-compose up -d -f docker-compose.frontend.yml
