--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,7 @@ jobs:
           script_stop: true
           script: |
             cd ~/deploy
-            docker login -u ${{ env.DO_TOKEN }} -p ${{ env.DO_TOKEN }} registry.digitalocean.com/techinterview
-            docker-compose pull -f docker-compose.frontend.yml
-            docker-compose up -d -f docker-compose.frontend.yml
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+            docker-compose -f docker-compose.frontend.yml pull
+            docker-compose -f docker-compose.frontend.yml up -d
+
