--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -1,13 +1,11 @@
 FROM node:17-alpine3.14 AS compile-image
 
 WORKDIR /app
-COPY ./Frontend .
-COPY default.conf .
-ENV PATH /app/node_modules/.bin:$PATH
+COPY . .
 RUN npm update
 RUN npm install -g @angular/cli@13.2.3
 RUN npm install
-RUN npm run build-stage
+RUN npm run build
 
 FROM nginx:1.17-alpine
 
@@ -15,5 +13,5 @@ RUN rm -rf /usr/share/nginx/html/*
 RUN rm -rf /etc/nginx/conf.d/*
 COPY --from=compile-image /app/default.conf /etc/nginx/conf.d/
 COPY --from=compile-image  /app/dist/petrel.interviewer /usr/share/nginx/html
-RUN cat /etc/nginx/conf.d/default.conf
 EXPOSE 80
+CMD ["npm", "run", "start"]
