--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -10,6 +10,9 @@ services:
     container_name: frontend
     image: {api}
     restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8080:80
     networks:
