--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build-prod": "ng build --configuration=production",
+    "serve-prod": "ng serve --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test-headless-ci-only": "ng test --browsers ChromiumNoSandbox",
