--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,27 @@
               ],
               "outputHashing": "all"
             },
+            "staging": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -78,6 +99,9 @@
           "configurations": {
             "production": {
               "buildTarget": "petrel.interviewer:build:production"
+            },
+            "staging": {
+              "buildTarget": "petrel.interviewer:build:staging"
             },
             "development": {
               "buildTarget": "petrel.interviewer:build:development"
