--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-auth-oidc-client": "^16.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "chart.js": "^4.4.1",
     "husky": "^7.0.4",
     "karma-spec-reporter": "^0.0.36",
     "ngx-cookie-service": "^17.0.1",
