--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@auth0/auth0-angular": "^2.2.2",
     "@ng-select/ng-select": "^12.0.4",
     "@popperjs/core": "^2.11.8",
+    "@sgratzl/chartjs-chart-boxplot": "^4.2.8",
     "angular-auth-oidc-client": "^16.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
