--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "ng test",
     "test-headless-ci-only": "ng test --browsers ChromiumNoSandbox",
     "lint": "ng lint",
-    "prettier": "pretty-quick"
+    "prettier": "pretty-quick",
+    "bundle:analyze": "ng build --stats-json && webpack-bundle-analyzer dist/petrel.interviewer/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -66,7 +67,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "pretty-quick": "^3.1.3",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "husky": {
     "hooks": {
