--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve -o",
     "build": "ng build",
     "build-prod": "ng build --configuration=production",
+    "serve-prod": "ng serve --configuration=production",
     "serve-staging": "ng serve --configuration=staging -o",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
