Libls updated to v20

--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^19.1.6",
-    "@angular/animations": "~19.1.5",
-    "@angular/common": "~19.1.5",
-    "@angular/compiler": "~19.1.5",
-    "@angular/core": "~19.1.5",
-    "@angular/forms": "~19.1.5",
-    "@angular/platform-browser": "~19.1.5",
-    "@angular/platform-browser-dynamic": "~19.1.5",
-    "@angular/router": "~19.1.5",
+    "@angular/animations": "~20.3.13",
+    "@angular/common": "~20.3.13",
+    "@angular/compiler": "~20.3.13",
+    "@angular/core": "~20.3.13",
+    "@angular/forms": "~20.3.13",
+    "@angular/platform-browser": "~20.3.13",
+    "@angular/platform-browser-dynamic": "~20.3.13",
+    "@angular/router": "~20.3.13",
     "@auth0/auth0-angular": "^2.2.2",
-    "@ng-select/ng-select": "^14.2.2",
+    "@ng-select/ng-select": "^20.0.1",
     "@popperjs/core": "^2.11.8",
     "@sgratzl/chartjs-chart-boxplot": "^4.4.4",
     "angular-auth-oidc-client": "^18.0.2",
@@ -37,10 +36,10 @@
     "chart.js": "^4.4.7",
     "husky": "^7.0.4",
     "karma-spec-reporter": "^0.0.36",
-    "ngx-cookie-service": "^19.1.0",
+    "ngx-cookie-service": "^20.1.1",
     "ngx-google-analytics": "^14.0.1",
-    "ngx-markdown": "^19.1.0",
-    "ngx-spinner": "^17.0.0",
+    "ngx-markdown": "^20.1.0",
+    "ngx-spinner": "^19.0.0",
     "oidc-client": "^1.11.5",
     "prettier": "^3.4.2",
     "puppeteer": "^24.2.0",
@@ -49,17 +48,19 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "18.4.3",
-    "@angular-eslint/eslint-plugin": "18.4.3",
-    "@angular-eslint/eslint-plugin-template": "18.4.3",
-    "@angular-eslint/schematics": "^18.4.3",
-    "@angular-eslint/template-parser": "18.4.3",
-    "@angular/cli": "~19.1.6",
-    "@angular/compiler-cli": "~19.1.5",
+    "@angular-eslint/builder": "20.7.0",
+    "@angular-eslint/eslint-plugin": "20.7.0",
+    "@angular-eslint/eslint-plugin-template": "20.7.0",
+    "@angular-eslint/schematics": "^20.7.0",
+    "@angular-eslint/template-parser": "20.7.0",
+    "@angular/build": "^20.3.11",
+    "@angular/cli": "~20.3.11",
+    "@angular/compiler-cli": "~20.3.13",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/utils": "^8.47.0",
     "eslint": "^8.56.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
@@ -68,7 +69,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "pretty-quick": "^4.0.0",
-    "typescript": "~5.5.4",
+    "typescript": "~5.9.3",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "husky": {
