--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interviewer",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
@@ -36,6 +36,7 @@
     "chart.js": "^4.4.7",
     "husky": "^7.0.4",
     "karma-spec-reporter": "^0.0.36",
+    "marked": "^16.0.0",
     "ngx-cookie-service": "^20.1.1",
     "ngx-google-analytics": "^14.0.1",
     "ngx-markdown": "^20.1.0",
