--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,32 +17,15 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "paths": {
-      "@app/*": [
-        "app/*"
-      ],
-      "@components/*": [
-        "src/app/components/*"
-      ],
-      "@environments/*": [
-        "src/environments/*"
-      ],
-      "@shared/*": [
-        "src/app/shared/*"
-      ],
-      "@models/*": [
-        "src/app/models/*"
-      ],
-      "@modules/*": [
-        "src/app/modules/*"
-      ],
-      "@services/*": [
-        "src/app/services/*"
-      ]
+      "@app/*": ["app/*"],
+      "@components/*": ["src/app/components/*"],
+      "@environments/*": ["src/environments/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@models/*": ["src/app/models/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@services/*": ["src/app/services/*"]
     }
   },
   "angularCompilerOptions": {
