--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~20.3.13",
-    "@angular/common": "~20.3.13",
-    "@angular/compiler": "~20.3.13",
-    "@angular/core": "~20.3.13",
-    "@angular/forms": "~20.3.13",
-    "@angular/platform-browser": "~20.3.13",
-    "@angular/platform-browser-dynamic": "~20.3.13",
-    "@angular/platform-server": "~20.3.13",
-    "@angular/router": "~20.3.13",
-    "@angular/ssr": "^20.3.13",
+    "@angular/animations": "20.3.13",
+    "@angular/common": "20.3.13",
+    "@angular/compiler": "20.3.13",
+    "@angular/core": "20.3.13",
+    "@angular/forms": "20.3.13",
+    "@angular/platform-browser": "20.3.13",
+    "@angular/platform-browser-dynamic": "20.3.13",
+    "@angular/platform-server": "20.3.13",
+    "@angular/router": "20.3.13",
+    "@angular/ssr": "20.3.13",
     "@auth0/auth0-angular": "^2.2.2",
     "@ng-select/ng-select": "^20.0.1",
     "@popperjs/core": "^2.11.8",
@@ -50,17 +50,17 @@
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
     "zod": "^4.1.12",
-    "zone.js": "^0.16.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-eslint/builder": "20.7.0",
     "@angular-eslint/eslint-plugin": "20.7.0",
     "@angular-eslint/eslint-plugin-template": "20.7.0",
-    "@angular-eslint/schematics": "^20.7.0",
+    "@angular-eslint/schematics": "20.7.0",
     "@angular-eslint/template-parser": "20.7.0",
-    "@angular/build": "^20.3.11",
-    "@angular/cli": "~20.3.11",
-    "@angular/compiler-cli": "~20.3.13",
+    "@angular/build": "20.3.11",
+    "@angular/cli": "20.3.11",
+    "@angular/compiler-cli": "20.3.13",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.17.19",
