--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-select/ng-select": "^20.0.1",
     "@popperjs/core": "^2.11.8",
     "@sgratzl/chartjs-chart-boxplot": "^4.4.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "angular-auth-oidc-client": "^18.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -69,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@typescript-eslint/utils": "^8.47.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.56.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
@@ -76,7 +78,9 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
     "pretty-quick": "^4.0.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "webpack-bundle-analyzer": "^4.10.1"
   },
