--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,9 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
+            },
+            "stylePreprocessorOptions": {
+              "includePaths": ["src"]
             }
           },
           "configurations": {
@@ -106,6 +109,25 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "local": {
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
+                "fonts": true
+              },
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -121,6 +143,9 @@
             },
             "development": {
               "buildTarget": "interviewer:build:development"
+            },
+            "local": {
+              "buildTarget": "interviewer:build:local"
             }
           },
           "defaultConfiguration": "development"
