--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
+    "start:local": "ng serve --configuration=local -o",
     "build": "ng build",
     "build-prod": "ng build --configuration=production",
+    "build-local": "ng build --configuration=local",
     "serve-prod": "ng serve --configuration=production",
     "serve-staging": "ng serve --configuration=staging -o",
+    "serve-local": "ng serve --configuration=local -o",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --browsers ChromiumNoSandbox",
     "test-headless-ci-only": "ng test --no-watch --browsers ChromiumNoSandbox",
@@ -15,7 +18,8 @@
     "pretty": "pretty-quick",
     "pretty-all": "prettier --write \"src/**/*.ts\" \"src/**/*.html\" \"src/**/*.scss\" \"src/**/*.json\" \"e2e/**/*.ts\" \"tools/**/*.ts\" \"*.json\"",
     "bundle:analyze": "ng build --stats-json && webpack-bundle-analyzer dist/interviewer/stats.json",
-    "serve:ssr:interviewer": "npm run build && node dist/interviewer/server/server.mjs"
+    "serve:ssr:interviewer": "npm run build && node dist/interviewer/server/server.mjs",
+    "serve:ssr:local": "npm run build-local && node dist/interviewer/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +33,9 @@
     "@angular/platform-server": "20.3.13",
     "@angular/router": "20.3.13",
     "@angular/ssr": "20.3.13",
-    "@auth0/auth0-angular": "^2.2.2",
     "@ng-select/ng-select": "^20.0.1",
     "@popperjs/core": "^2.11.8",
     "@sgratzl/chartjs-chart-boxplot": "^4.4.4",
-    "angular-auth-oidc-client": "^18.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
@@ -46,7 +48,6 @@
     "ngx-cookie-service": "^20.1.1",
     "ngx-google-analytics": "^14.0.1",
     "ngx-markdown": "^20.1.0",
-    "oidc-client": "^1.11.5",
     "prettier": "^3.4.2",
     "puppeteer": "^24.2.0",
     "rxjs": "~7.8.1",
