Last steps for GEO and SEO

--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/robots.txt",
-              "src/sitemap.xml"
+              "src/robots.txt"
             ],
             "styles": [
               "src/styles.scss",
@@ -166,8 +165,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/robots.txt",
-              "src/sitemap.xml"
+              "src/robots.txt"
             ],
             "styles": ["src/styles.scss"],
             "scripts": []
