perf(seo): optimize crawlability and payload
Implement Phase 1 SEO and performance improvements for techinterview.space and /salaries.\n\n- Replace non-crawlable login anchor with semantic button control\n- Add sitemap redirect endpoint and enable compression in SSR server\n- Remove eager lazy-module imports and global Prism bundle; lazy load Prism where needed\n- Add responsive image variants, intrinsic sizing, and loading-priority hints\n- Add salaries loading shell and delayed GIF strategy to reduce CLS\n- Keep robots strategy: /salaries blocked, /salaries/overview allowed\n\nIncludes unit tests for navbar semantics, loading spinner behavior, and sitemap redirect handling.

--- a/angular.json
+++ b/angular.json
@@ -30,14 +30,10 @@
             "assets": ["src/favicon.ico", "src/assets", "src/robots.txt"],
             "styles": [
               "src/styles.scss",
-              "node_modules/prismjs/themes/prism-okaidia.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/prismjs/prism.js",
-              "node_modules/prismjs/components/prism-csharp.min.js",
-              "node_modules/prismjs/components/prism-css.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
             "browser": "src/main.ts",
             "server": "src/main.server.ts",
