--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
+    "compression": "^1.8.1",
     "cytoscape": "3.33.1",
     "d3-selection": "3.0.0",
     "express": "^5.1.0",
@@ -49,6 +50,7 @@
     "ngx-google-analytics": "^14.0.1",
     "ngx-markdown": "^20.1.0",
     "prettier": "^3.4.2",
+    "prismjs": "^1.30.0",
     "puppeteer": "^24.2.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
@@ -64,9 +66,11 @@
     "@angular/build": "20.3.11",
     "@angular/cli": "20.3.11",
     "@angular/compiler-cli": "20.3.13",
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.17.19",
+    "@types/prismjs": "^1.26.5",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@typescript-eslint/utils": "^8.47.0",
